--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -21,3 +21,13 @@
 .topNav h1 {
   float: left;
 }
+
+.container {
+  width = 100%;
+}
+
+#breakoutStart {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
