--- a/html/games/breakout/breakout.css
+++ b/html/games/breakout/breakout.css
@@ -1,11 +1,44 @@
 #breakoutCanvas {
+  float: left;
   padding: 0;
   background: #eee;
   display: block;
-  margin: 0 auto;
+  margin-left: 15%;
 }
 
 #breakoutStart {
   display: block;
   margin: 0 auto;
+}
+
+#ballSizeSlider {
+  -webkit-appearance: none;
+  background: #eee;
+  opacity: 0.7;
+  height: 15px;
+  border-radius: 5px;
+  float: right;
+  margin-right: 15%;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+#ballSizeSlider:hover {
+  opacity: 1;
+}
+
+#ballSizeSlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #0095DD;
+  cursor: pointer;
+}
+
+#ballSizeSlider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #0095DD;
+  cursor: pointer;
 }
