--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -30,11 +30,6 @@ body {
   width = 100%;
 }
 
-#breakoutStart {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%);
-  ms-transform: translate(-50%);
-
+*:focus {
+  outline: none;
 }
