--- a/html/games/breakout/breakout.css
+++ b/html/games/breakout/breakout.css
@@ -6,12 +6,7 @@
   margin-left: 25%;
 }
 
-#breakoutStart {
-  display: block;
-  margin: 0 auto;
-}
-
-#ballSizeSlider {
+.slider {
   -webkit-appearance: none;
   background: #eee;
   opacity: 0.7;
@@ -23,11 +18,7 @@
   transition: opacity .2s;
 }
 
-#ballSizeSlider:hover {
-  opacity: 1;
-}
-
-#ballSizeSlider::-webkit-slider-thumb {
+.slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 20px;
   height: 20px;
@@ -36,9 +27,22 @@
   cursor: pointer;
 }
 
-#ballSizeSlider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
   background: #0095DD;
+  border-radius: 50%;
   cursor: pointer;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+#ballSizeSlider {
+  margin-top: 50px;
+}
+
+#rowSlider {
+  margin-top: 50px;
 }
