--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -6,7 +6,7 @@
 
 /*Top of page including HEADER, NAV LINKS, AND LOGO*/
 .headerContainer, .navLinksContainer {
-  color: black;
+  color: #727777;
   width: 40%;
   height: 180px;
   float: left;
@@ -41,7 +41,8 @@
 .navLinksContainer a {
   text-decoration: none;
   float: right;
-  color: black;
+  font-weight: bold;
+  color: inherit;
   flex: .5;
   text-align: center;
   height: 50px;
@@ -52,8 +53,8 @@
   color: #26BBBF;
 }
 
-/*Welcome Banner*/
-.welcomeBanner {
+/*Welcome Banners*/
+.homeBanner {
   float: left;
   width: 60%;
   margin-left: 20%;
@@ -63,9 +64,23 @@
   text-align: center;
 }
 
-.welcomeBanner h2 {
+.homeBanner h2 {
   color: white;
   font-size: 6vw;
+}
+
+.pageBanner {
+  float: left;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+  background-color: #26BBBF;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.pageBanner h2 {
+  color: white;
 }
 
 /* Breakout game CONTAINER and SLIDER containers and objects*/
