--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -87,8 +87,8 @@
   margin-right: 10%;
 }
 
-/*Sports article styles*/
-.articleContainer {
+/*Card styles*/
+.cardContainer {
   float: left;
   margin-left: 10%;
   margin-right: 10%;
@@ -96,7 +96,9 @@
   margin-top: 50px;
 }
 
-.leftArticleContainer, .middleArticleContainer, .rightArticleContainer{
+.leftCardContainer,
+.middleCardContainer,
+.rightCardContainer {
   height: 400px;
   border-style: solid;
   border-radius: 20px;
@@ -104,25 +106,37 @@
   border-width: 5px;
 }
 
-.leftArticleContainer:hover, .middleArticleContainer:hover, .rightArticleContainer:hover {
+.leftCardContainer:hover,
+.middleCardContainer:hover,
+.rightCardContainer:hover {
   background-color: #eee;
 }
 
-.leftArticleContainer {
+.leftCardContainer {
   width: 30%;
   float: left;
 }
 
-.middleArticleContainer {
+.middleCardContainer {
+  display: flex;
+  align-items: center;
   width: 30%;
   float: left;
   margin-left: 5%;
   margin-right: 5%;
 }
 
-.rightArticleContainer {
+.rightCardContainer {
   width: 30%;
   float: left;
+}
+
+#breakoutPreview {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75%;
+  max-height: 75%;
 }
 
 /* Breakout game CONTAINER and SLIDER containers and objects*/
@@ -190,7 +204,9 @@
     font-size: 4vw;
   }
 
-  .leftArticleContainer, .rightArticleContainer, .middleArticleContainer {
+  .leftCardContainer,
+  .rightCardContainer,
+  .middleCardContainer {
     width: 100%;
     height: 400px;
     margin-bottom: 20px;
