--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -144,7 +144,6 @@
   width: 60%;
   float: left;
   padding-top: 100px;
-
 }
 
 .ballSizeSliderContainer, .rowSliderContainer {
@@ -156,6 +155,22 @@
 #ballSizeSlider, #rowSlider {
   float: left;
   margin-left: 10%;
+}
+
+/*Minesweeper game CONTAINER*/
+.minesweeperContainer {
+  width: 100%;
+  float: left;
+  padding-top: 100px;
+}
+
+#minesweeperCanvas {
+  background-color: #26BBBF;
+  padding: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
 }
 
 /*Removes outline when object is clicked on*/
