--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -175,6 +175,34 @@
   margin-bottom: 100px;
 }
 
+.scoreboardContainer {
+  width: 100%;
+  margin-top: 10px;
+  float: left;
+}
+
+.scoreboard {
+  height: 40px;
+  border-style: solid;
+  border-color: #26BBBF;
+  padding: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.score {
+  width: 33.33%;
+  float: left;
+  border-style: double;
+  border-color: #26BBBF;
+  height: 100%;
+  font-size: 150%;
+  color: #26BBBF;
+  text-align: center;
+}
+
 .newGameContainer {
   width: 100%;
   float: left;
