--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -198,7 +198,7 @@
   border-style: double;
   border-color: #26BBBF;
   height: 100%;
-  font-size: 150%;
+  font-size: 30px;
   color: #26BBBF;
   text-align: center;
 }
@@ -290,5 +290,11 @@
     width: 100%;
     height: 400px;
     margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 500px){
+  .score {
+    font-size: 20px;
   }
 }
