--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -177,7 +177,6 @@
 
 .scoreboardContainer {
   width: 100%;
-  margin-top: 10px;
   float: left;
 }
 
@@ -234,6 +233,18 @@
   font-size: 2vw;
   padding: 10px;
   border-width: 2px;
+}
+
+.bestTimeContainer {
+  width: 100%;
+  float: left;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.bestTime {
+  color: #26BBBF;
 }
 
 /*Removes outline when object is clicked on*/
