--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -146,7 +146,8 @@
 .breakoutContainer {
   width: 60%;
   float: left;
-  padding-top: 100px;
+  padding-top: 50px;
+  margin-bottom: 200px;
 }
 
 .ballSizeSliderContainer, .rowSliderContainer {
@@ -182,20 +183,45 @@
 
 .scoreboard {
   height: 40px;
-  border-style: solid;
+/*  border-style: solid;
   border-color: #26BBBF;
-  padding: 0;
+  padding: 0;*/
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
 }
 
+/*.dropDown {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  display: none;
+}
+
+.dropDown:hover .dropDownContent {
+  display: block;
+}
+
+.dropDownContent {
+  position: absolute;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropDownContent p:hover {
+  background-color: #eee;
+}
+
+.show {
+  display: block;
+}
+*/
 .score {
   width: 33.33%;
   float: left;
-  border-style: double;
-  border-color: #26BBBF;
+  /*border-style: double;
+  border-color: #26BBBF;*/
   height: 100%;
   font-size: 30px;
   color: #26BBBF;
