--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -245,10 +245,11 @@
 }
 
 .newGameButton {
-  width: 20%;
+  width: 40%;
   padding: 0;
   display: block;
   margin-top: 50px;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   border-style: solid;
