add tesla page and change investing design

--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -1,11 +1,12 @@
-@import url("libraries/hover.css");
+@import url('libraries/hover.css');
 
 * {
   box-sizing: border-box;
 }
 
 /*Top of page including HEADER, NAV LINKS, AND LOGO*/
-.headerContainer, .navLinksContainer {
+.headerContainer,
+.navLinksContainer {
   color: #727777;
   width: 40%;
   height: 180px;
@@ -31,6 +32,13 @@
   padding-right: 0px;
 }
 
+.articleLinks {
+  width: 100%;
+  float: left;
+  padding: 0;
+  margin: 0;
+}
+
 .navLinksContainer {
   padding-left: 10%;
   padding-bottom: 20px;
@@ -43,38 +51,44 @@
   float: right;
   font-weight: bold;
   color: inherit;
-  flex: .5;
+  flex: 0.5;
   text-align: center;
   height: 50px;
   font-size: 17px;
 }
 
 .navLinksContainer a:hover {
-  color: #26BBBF;
+  color: #26bbbf;
 }
 
 /*Welcome Banners*/
 .homeBanner {
   float: left;
   width: 60%;
+  max-height: 200px;
   margin-left: 20%;
   margin-right: 20%;
-  background-color: #26BBBF;
+  background-color: #26bbbf;
   border-radius: 20px;
   text-align: center;
-}
-
-.homeBanner h2 {
   color: white;
+  padding: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   font-size: 6vw;
 }
+
+/* .homeBanner h2 {
+  color: white;
+  font-size: 6vw;
+} */
 
 .pageBanner {
   float: left;
   margin-left: 20%;
   margin-right: 20%;
   width: 60%;
-  background-color: #26BBBF;
+  background-color: #26bbbf;
   border-radius: 20px;
   text-align: center;
 }
@@ -85,6 +99,39 @@
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
+}
+
+.tileContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 50px;
+  box-sizing: border-box; /* Include padding and border in element's total width and height */
+  width: 100%; /* Take up full width of parent */
+  max-width: 100%; /* Don't allow element to exceed width of parent */
+}
+
+.tile {
+  width: 200px;
+  height: 200px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.tile:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.tileImage {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /*Card styles*/
@@ -102,7 +149,7 @@
   height: 400px;
   border-style: solid;
   border-radius: 20px;
-  border-color: #26BBBF;
+  border-color: #26bbbf;
   border-width: 5px;
   margin-bottom: 50px;
 }
@@ -150,13 +197,15 @@
   margin-bottom: 200px;
 }
 
-.ballSizeSliderContainer, .rowSliderContainer {
+.ballSizeSliderContainer,
+.rowSliderContainer {
   float: right;
   width: 40%;
   padding-top: 100px;
 }
 
-#ballSizeSlider, #rowSlider {
+#ballSizeSlider,
+#rowSlider {
   float: left;
   margin-left: 10%;
 }
@@ -168,7 +217,7 @@
 }
 
 #minesweeperCanvas {
-  background-color: #26BBBF;
+  background-color: #26bbbf;
   padding: 0;
   display: block;
   margin-left: auto;
@@ -183,7 +232,7 @@
 
 .scoreboard {
   height: 40px;
-/*  border-style: solid;
+  /*  border-style: solid;
   border-color: #26BBBF;
   padding: 0;*/
   display: block;
@@ -224,7 +273,7 @@
   border-color: #26BBBF;*/
   height: 100%;
   font-size: 30px;
-  color: #26BBBF;
+  color: #26bbbf;
   text-align: center;
 }
 
@@ -237,7 +286,7 @@
   float: left;
   width: 100%;
   text-align: center;
-  color: #26BBBF;
+  color: #26bbbf;
 }
 
 .timeContainer h2 {
@@ -254,9 +303,9 @@
   margin-right: auto;
   border-style: solid;
   border-radius: 20px;
-  border-color: #26BBBF;
+  border-color: #26bbbf;
   background-color: white;
-  color: #26BBBF;
+  color: #26bbbf;
   font-size: 2vw;
   padding: 10px;
   border-width: 2px;
@@ -271,7 +320,7 @@
 }
 
 .bestTime {
-  color: #26BBBF;
+  color: #26bbbf;
 }
 
 /*Removes outline when object is clicked on*/
@@ -280,7 +329,9 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .navLinksContainer, .headerContainer, .logoContainer {
+  .navLinksContainer,
+  .headerContainer,
+  .logoContainer {
     width: 100%;
     margin: auto;
     text-align: center;
@@ -309,7 +360,8 @@
     float: none;
   }
 
-  #ballSizeSlider, #rowSlider {
+  #ballSizeSlider,
+  #rowSlider {
     display: block;
     float: none;
     margin-left: auto;
@@ -331,7 +383,7 @@
   }
 }
 
-@media (max-width: 500px){
+@media (max-width: 500px) {
   .score {
     font-size: 20px;
   }
